--- a/myPj/julia-set/d3-julia.html
+++ b/myPj/julia-set/d3-julia.html
@@ -13,6 +13,17 @@
   />
 
   <style>
+    /* ─── レスポンシブな基本フォントサイズ ─── */
+    html {
+      font-size: 1.2vw; /* ビューポート幅の 1.2% を基準とする */
+    }
+    @media (max-width: 768px) {
+      html {
+        font-size: 2.5vw; /* Moblie（幅<768px）では 2.5vw として文字が小さくなりすぎないように */
+      }
+    }
+
+    /* ─── 以下は元のコードと同じ ─── */
     body {
       margin: 0;
       height: 100vh;
@@ -30,14 +41,21 @@
       position: absolute;
       top: 1rem;
       left: 1rem;
-      width: 2rem;
-      height: 18rem;
+      width: 3vw;
+      height: 20vw;
       background: rgba(255, 255, 255, 0.05);
       border: 1px solid rgba(255, 255, 255, 0.3);
       z-index: 10;
       pointer-events: none;
-      /* 初期表示は CSS 側で block */
       display: block;
+      font-size: 0.1vw;
+    }
+    @media (max-width: 768px) {
+      #legend-canvas {
+        width: 5vw;
+        height: 25vw;
+        font-size: 0.5rem;
+      }
     }
   </style>
 
@@ -86,7 +104,7 @@
     </div>
     <div class="offcanvas-body">
       <form>
-        <!-- フォームスイッチ → form-switch-reverse を使って左右を反転 -->
+        <!-- フォームスイッチ -->
         <div class="form-check form-switch mb-3">
           <input
             class="form-check-input"
@@ -142,7 +160,7 @@
             step="1"
             class="form-control"
             id="input-iter"
-            value="12"
+            value="9"
           />
         </div>
 
@@ -178,7 +196,7 @@
         </div>
 
         <hr />
-
+        <p class="small text-muted">Runで描画開始（初期値が推奨パラメータです）</p>
         <p class="small text-muted">赤色は発散と収束の境界です。</p>
         <p class="small text-muted">ドラッグ・ホイールでカメラを移動できます。</p>
         <p class="small text-muted">Stopを押すと初期状態に戻ります。</p>
@@ -197,129 +215,6 @@
     crossorigin="anonymous"
   ></script>
 
-  <!-- メインスクリプト -->
-  <script type="module">
-    import { Complex } from './js/util/complex-number.js';
-    import {
-      initThree,
-      animateLoop,
-      runInverseAnimation,
-      scene
-    } from './js/3d/d3-main.js';
-
-    // legend.js から必要な関数群をインポート
-    import { drawLegend, toggleLegend, showLegend, hideLegend } from './js/util/legend.js';
-
-    // ─── グローバルフラグ ───
-    window.isRunning = false;
-    window.isPaused  = false;
-    window.isStopped = false;
-
-    // ─── Three.js 初期化 ───
-    initThree();
-    animateLoop();
-
-    // ─── 要素取得 ───
-    const inputRe   = document.getElementById('input-re');
-    const inputIm   = document.getElementById('input-im');
-    const inputN    = document.getElementById('input-n');
-    const inputIter = document.getElementById('input-iter');
-    const btnRun    = document.getElementById('btn-run');
-    const btnPause  = document.getElementById('btn-pause');
-    const btnStop   = document.getElementById('btn-stop');
-    const chkLegend = document.getElementById('chk-legend');
-    const status    = document.getElementById('status');
-
-    // ─── Runボタンイベント（凡例再描画含む） ───
-    btnRun.addEventListener('click', async () => {
-      if (!window.isRunning) {
-        window.isRunning = true;
-        window.isPaused  = false;
-        window.isStopped = false;
-
-        btnRun.classList.add('d-none');
-        btnPause.classList.remove('d-none');
-
-        const cre = parseFloat(inputRe.value);
-        const cim = parseFloat(inputIm.value);
-        const c   = new Complex(cre, cim);
-        const N       = parseInt(inputN.value, 10);
-        const maxIter = parseInt(inputIter.value, 10);
-
-        status.textContent = '(実行中…)';
-        try {
-          const { minZ, maxZ, totalPoints } = await runInverseAnimation(c, N, maxIter, 800);
-          window.isRunning = false;
-
-          btnPause.classList.add('d-none');
-          btnPause.textContent = 'Pause';
-          btnRun.textContent   = 'Run';
-          btnRun.classList.remove('d-none');
-
-          status.textContent = `(完了: N=${N}, maxIter=${maxIter}, 点数=${totalPoints})`;
-          drawLegend(minZ, maxZ);
-        } catch (err) {
-          window.isRunning = false;
-          btnPause.classList.add('d-none');
-          btnPause.textContent = 'Pause';
-          btnRun.textContent   = 'Run';
-          btnRun.classList.remove('d-none');
-          status.textContent = '(Stopped)';
-        }
-      } else if (window.isPaused) {
-        window.isPaused = false;
-        btnPause.textContent = 'Pause';
-        status.textContent   = '(実行中…)';
-      }
-    });
-
-    // ─── Pause/Resume ───
-    btnPause.addEventListener('click', () => {
-      if (!window.isPaused) {
-        window.isPaused = true;
-        btnPause.textContent = 'Resume';
-        status.textContent   = '(Paused)';
-      } else {
-        window.isPaused = false;
-        btnPause.textContent = 'Pause';
-        status.textContent   = '(実行中…)';
-      }
-    });
-
-    // ─── Stop ───
-    btnStop.addEventListener('click', () => {
-      window.isStopped = true;
-      window.isPaused  = false;
-      window.isRunning = false;
-
-      const toRemove = [];
-      scene.traverse(obj => {
-        if (obj.isPoints) toRemove.push(obj);
-      });
-      toRemove.forEach(p => scene.remove(p));
-
-      btnPause.classList.add('d-none');
-      btnPause.textContent = 'Pause';
-      btnRun.textContent   = 'Run';
-      btnRun.classList.remove('d-none');
-      status.textContent = '(待機中)';
-
-      drawLegend(0, 2);
-
-      inputRe.value   = '-0.4';
-      inputIm.value   = '0.6';
-      inputN.value    = '90';
-      inputIter.value = '12';
-    });
-
-    // ─── 凡例の表示/非表示スイッチ ───
-    chkLegend.addEventListener('change', () => {
-      if (chkLegend.checked) {
-        showLegend();
-      } else {
-        hideLegend();
-      }
-    });
-  </script>
+  <script type="module" src="js/3d/d3-app.js"></script>
 </body>
 </html>
