--- a/myPj/julia-set/d3-julia.html
+++ b/myPj/julia-set/d3-julia.html
@@ -200,7 +200,7 @@
   ></script>
 
   <!-- Three.js 用メインスクリプト -->
-  <script type="module" src="js/3d/d3-app.js"></script>
+  <script type="module" src="js/3d/d3-ui-controller.js"></script>
 
   <!-- 凡例制御（外部ファイルに切り出し） -->
   <script type="module" src="js/controller/legend-controller.js"></script>
