--- a/myPj/julia-set/d3-julia-mobile.html
+++ b/myPj/julia-set/d3-julia-mobile.html
@@ -200,12 +200,12 @@
   ></script>
 
   <!-- Three.js 用メインスクリプト -->
-  <script type="module" src="js/3d/d3-ui-controller.js"></script>
+  <script type="module" src="js/3d/d3-ui.js"></script>
 
   <!-- 凡例制御（外部ファイルに切り出し） -->
-  <script type="module" src="js/controller/legend-controller.js"></script>
+  <script type="module" src="js/3d/ui/legend-ui.js"></script>
 
   <!-- ボタン制御（外部ファイルに切り出し） -->
-  <script type="module" src="js/controller/button-controller.js"></script>
+  <script type="module" src="js/3d/ui/button-ui.js"></script>
 </body>
 </html>
