--- a/myPj/julia-set/d3-julia.html
+++ b/myPj/julia-set/d3-julia.html
@@ -200,12 +200,7 @@
   ></script>
 
   <!-- Three.js 用メインスクリプト -->
-  <script type="module" src="js/3d/d3-ui.js"></script>
+  <script type="module" src="js/3d/d3-init-app.js"></script>
 
-  <!-- 凡例制御（外部ファイルに切り出し） -->
-  <script type="module" src="js/3d/ui/legend-ui.js"></script>
-
-  <!-- ボタン制御（外部ファイルに切り出し） -->
-  <script type="module" src="js/3d/ui/button-ui.js"></script>
 </body>
 </html>
