--- a/myPj/julia-set/2d-partials/offcanvas-config.html
+++ b/myPj/julia-set/2d-partials/offcanvas-config.html
@@ -1,3 +1,4 @@
+<!-- ファイル: julia-set/2d-partials/offcanvas-config.html -->
 <div
   class="offcanvas offcanvas-start bg-dark text-light"
   tabindex="-1"
@@ -14,6 +15,7 @@
     ></button>
   </div>
   <div class="offcanvas-body">
+    <!-- 設定フォーム -->
     <div id="config">
       <div class="mb-3">
         <label for="cRe" class="form-label">c の実部 (cRe)</label>
@@ -24,9 +26,9 @@
           step="0.001"
           placeholder="例: -0.4"
           data-default-value="-0.4"
-        />
+        >
         <div class="form-text text-light">
-          ジュリア集合を決める複素定数 c の実部です。<br />
+          ジュリア集合を決める複素定数 c の実部です。<br>
           推奨：−1.5〜1.5
         </div>
       </div>
@@ -40,7 +42,7 @@
           step="0.001"
           placeholder="例: 0.6"
           data-default-value="0.6"
-        />
+        >
         <div class="form-text text-light">
           ジュリア集合を決める複素定数 c の虚部です。推奨：0.0〜1.0
         </div>
@@ -55,7 +57,7 @@
           step="1"
           placeholder="例: 45"
           data-default-value="45"
-        />
+        >
         <div class="form-text text-light">
           最初の円を描画する点の数。45〜360 程度が目安。
         </div>
@@ -70,7 +72,7 @@
           step="1"
           placeholder="例: 12"
           data-default-value="12"
-        />
+        >
         <div class="form-text text-light">
           逆写像を繰り返す回数。10〜20 程度が目安。
         </div>
@@ -85,11 +87,12 @@
           step="100"
           placeholder="例: 500"
           data-default-value="500"
-        />
+        >
         <div class="form-text text-light">
           各ステップの停止時間 (ms)。500〜3000ms 程度がおすすめ。
         </div>
       </div>
     </div>
+    <!-- 設定フォームここまで -->
   </div>
 </div>
