--- a/myPj/julia-set/d2-julia.html
+++ b/myPj/julia-set/d2-julia.html
@@ -1,158 +1,76 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8" />
-  <title>Julia-set Inverse Mapping</title>
-  <meta name="google-site-verification" content="google1dd9a6e9f696a4f9" />
+  <head>
+    <meta charset="UTF-8" />
+    <title>Julia-set Inverse Mapping</title>
+    <meta name="google-site-verification" content="google1dd9a6e9f696a4f9" />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      crossorigin="anonymous"
+    />
+    <!-- Bootstrap Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+    <!-- 自作の CSS -->
+    <link rel="stylesheet" href="css/d2-style.css" />
+  </head>
 
-  <!-- Bootstrap CSS -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    crossorigin="anonymous"
-  />
-
-  <!-- Bootstrap Icons -->
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-  />
-
-  <!-- 自作の CSS -->
-  <link rel="stylesheet" href="css/d2-style.css" />
-</head>
-<body class="bg-dark text-light">
-
-  <!-- ─── ① ナビバー（外部ファイル読み込み） ─── -->
-  <div id="navbar-placeholder"></div>
-    
-  <!-- ────────────── メインコンテナ ────────────── -->
-  <div class="container-fluid px-3 py-4">
-    <div class="row justify-content-center">
-      <!-- この col-* を flexbox の縦並びかつ中央寄せに変更 -->
-      <div class="col-lg-8 col-md-10 col-12 mb-4 d-flex flex-column align-items-center">
-
-        <!-- Canvas を包むコンテナ -->
-        <div id="canvas-container" class="w-100 position-relative border rounded overflow-hidden mb-2">
-          <img
-            id="bg-image"
-            src="img/onmyo.png"
-            alt="陰陽マーク"
-            class="position-absolute top-50 start-50 translate-middle opacity-10"
-            style="width: 40%;"
-          />
-          <canvas
-            id="inverse-canvas"
-            class="w-100"
-            style="aspect-ratio: 4/3; background: transparent;"
-            width="800"
-            height="600"
-          ></canvas>
+  <body class="bg-dark text-light">
+    <!-- ─── ① ナビバー（外部ファイル読み込み） ─── -->
+    <div id="navbar-placeholder"></div>
+    <!-- ────────────── メインコンテナ ────────────── -->
+    <div class="container-fluid px-3 py-4">
+      <div class="row justify-content-center">
+        <div class="col-lg-8 col-md-10 col-12 mb-4 d-flex flex-column align-items-center">
+          <!-- Canvas を包むコンテナ -->
+          <div
+            id="canvas-container"
+            class="w-100 position-relative border rounded overflow-hidden mb-2"
+          >
+            <img
+              id="bg-image"
+              src="img/onmyo.png"
+              alt="陰陽マーク"
+              class="position-absolute top-50 start-50 translate-middle opacity-10"
+              style="width: 40%;"
+            />
+            <canvas
+              id="inverse-canvas"
+              class="w-100"
+              style="aspect-ratio: 4/3; background: transparent;"
+              width="800"
+              height="600"
+            ></canvas>
+          </div>
+          <!-- 計算式表示 -->
+          <div
+            id="formula"
+            class="mt-3 p-3 rounded text-center bg-transparent text-light"
+            style="white-space: pre-wrap; width: 100%;"
+          >
+            ここに計算式・処理内容が表示されます。
+          </div>
         </div>
-
-        <!-- 計算式表示 -->
-        <div
-          id="formula"
-          class="mt-3 p-3 rounded text-center bg-transparent text-light"
-          style="white-space: pre-wrap; width: 100%;"
-        >
-          ここに計算式・処理内容が表示されます。
-        </div>
-
       </div>
     </div>
-  </div>
 
-  <!-- ────────────── 設定フォーム用 Offcanvas ────────────── -->
-  <!-- 設定フォーム用 Offcanvas は外部ファイルを読み込む -->
-  <div id="offcanvas-config-placeholder"></div>
+    <!-- ────────────── 設定フォーム用 Offcanvas ────────────── -->
+    <div id="offcanvas-config-placeholder"></div>
+    <!-- ────────────── 更新履歴用 Offcanvas ────────────── -->
+    <div id="offcanvas-history-placeholder"></div>
+    <!-- ────────────── ページ下部：関連リンク（外部ファイル読み込み） ────────────── -->
+    <div id="footer-placeholder"></div>
+    <!-- ─── 各パーツ読み込み → main.js 読み込み用スクリプト ─── -->
+    <script src="js/2d/d2-load-partials.js"></script>
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      crossorigin="anonymous"
+    ></script>
 
-  <!-- 更新履歴用 Offcanvas は外部ファイルを読み込み -->
-  <div id="offcanvas-history-placeholder"></div>
-  
-  <!-- ────────────── ページ下部：関連リンク ────────────── -->
-  <footer class="text-center text-light mt-4">
-    <div class="container">
-      <p>
-        関連 ▶▶
-        <a
-          href="https://uminomae.github.io/pjdhiro/20250531julia/"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="text-info"
-        >
-          陰陽なJulia集合を逆にたどる
-        </a>
-      </p>
-    </div>
-  </footer>
-
-
-<!-- ─── ナビバー読み込み＆d2-main.js 読み込み用スクリプト ─── -->
-<script>
-  async function includeHTML(selector, url) {
-    const container = document.querySelector(selector);
-    if (!container) {
-      console.warn(`includeHTML: "${selector}" が見つかりません`);
-      return;
-    }
-    try {
-      console.log(`★ includeHTML: "${url}" を fetch 開始`);
-      const resp = await fetch(url);
-      if (!resp.ok) {
-        throw new Error(`${url} の読み込みに失敗: ${resp.status}`);
-      }
-      const html = await resp.text();
-      console.log(`★ includeHTML: "${url}" の取得成功 (${html.length} bytes)`);
-      container.innerHTML = html;
-      console.log(`★ includeHTML: "${selector}" に HTML を挿入完了`);
-    } catch (err) {
-      console.error(`★ includeHTML Error (${url}):`, err);
-      container.innerHTML = `<!-- ${url} の読み込みエラー -->`;
-    }
-  }
-
-  document.addEventListener('DOMContentLoaded', () => {
-    console.log('DOMContentLoaded 発火 → navbar 読み込み開始');
-
-    // (1) ナビバー読み込み
-    includeHTML('#navbar-placeholder', '2d-partials/navbar.html')
-      .then(() => {
-        console.log('→ navbar 読み込み完了。次に設定フォーム用 Offcanvas 読み込み');
-        // (2) 設定フォーム用 Offcanvas を読み込む
-        return includeHTML('#offcanvas-config-placeholder', '2d-partials/offcanvas-config.html');
-      })
-      .then(() => {
-        console.log('→ 設定フォーム用 Offcanvas 読み込み完了。次に更新履歴用 Offcanvas 読み込み');
-        // (3) 更新履歴用 Offcanvas を読み込む
-        return includeHTML('#offcanvas-history-placeholder', '2d-partials/offcanvas-history.html');
-      })
-      .then(() => {
-        console.log('→ 更新履歴用 Offcanvas 読み込み完了。ここで d2-main.js を動的追加');
-        // (4) すべての HTML が揃ったところで main.js を動的に追加
-        const script = document.createElement('script');
-        script.type = 'module';
-        script.src = 'js/2d/d2-main.js';
-        script.onload = () => console.log('★★ d2-main.js 読み込み完了');
-        script.onerror = () => console.error('★★ d2-main.js の読み込み失敗');
-        document.body.appendChild(script);
-      })
-      .catch(err => {
-        console.error('どこかで読み込み失敗:', err);
-        // 必要ならフォールバックで main.js を直接追加するコードをここに書く
-      });
-  });
-</script>
-
-
-
-  <!-- Bootstrap JS -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    crossorigin="anonymous"
-  ></script>
-
-  <!-- スクリプト本体 -->
-  <!-- <script type="module" src="js/2d/d2-main.js"></script> -->
-</body>
+  </body>
 </html>
