--- a/myPj/julia-set/2d-partials/offcanvas-config.html
+++ b/myPj/julia-set/2d-partials/offcanvas-config.html
@@ -1,6 +1,6 @@
 <!-- ファイル: julia-set/2d-partials/offcanvas-config.html -->
 <div
-  class="offcanvas offcanvas-start offcanvas-fullscreen-sm-down bg-dark text-light"
+  class="offcanvas offcanvas-start offcanvas-fullscreen-sm-b text-light"
   tabindex="-1"
   id="offcanvasConfig"
   aria-labelledby="offcanvasConfigLabel"
