--- a/myPj/julia-set/2d-partials/offcanvas-history.html
+++ b/myPj/julia-set/2d-partials/offcanvas-history.html
@@ -1,6 +1,6 @@
 <!-- ファイル: julia-set/2d-partials/offcanvas-history.html -->
 <div
-  class="offcanvas offcanvas-end offcanvas-fullscreen-sm-down bg-dark text-light"
+  class="offcanvas offcanvas-end offcanvas-fullscreen-sm-down text-light"
   tabindex="-1"
   id="offcanvasHistory"
   aria-labelledby="offcanvasHistoryLabel"
