--- a/myPj/julia-set/d2-julia.html
+++ b/myPj/julia-set/d2-julia.html
@@ -30,7 +30,7 @@
           <!-- Canvas を包むコンテナ -->
           <div
             id="canvas-container"
-            class="w-100 position-relative border rounded overflow-hidden mb-2"
+            class="w-100 position-relative rounded overflow-hidden mb-2"
           >
             <img
               id="bg-image"
