--- a/myPj/julia-set/2d-partials/navbar.html
+++ b/myPj/julia-set/2d-partials/navbar.html
@@ -1,5 +1,5 @@
 <!-- ファイル: julia-set/2d-partials/navbar.html -->
-<nav class="navbar navbar-expand-md navbar-dark bg-secondary fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Julia-set Inverse Mapping</a>
 
