--- a/myPj/julia-set/2d-partials/offcanvas-config.html
+++ b/myPj/julia-set/2d-partials/offcanvas-config.html
@@ -6,7 +6,7 @@
   aria-labelledby="offcanvasConfigLabel"
 >
   <div class="offcanvas-header border-bottom border-secondary">
-    <h5 class="offcanvas-title" id="offcanvasConfigLabel">設定</h5>
+    <h5 class="offcanvas-title" id="offcanvasConfigLabel">設定  ※Resetしてから変更ください</h5>
     <button
       type="button"
       class="btn-close btn-close-white"
