--- a/myPj/julia-set/d2-julia.html
+++ b/myPj/julia-set/d2-julia.html
@@ -53,7 +53,8 @@
             class="mt-3 p-3 rounded text-center bg-transparent text-light"
             style="white-space: pre-wrap; width: 100%;"
           >
-            ここに計算式・処理内容が表示されます。
+            開始方法：右上のメニュー→Play
+            設定変更：右上のメニュー→Reset→設定変更
           </div>
         </div>
       </div>
@@ -72,6 +73,6 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
     ></script>
-
+  
   </body>
 </html>
