--- a/myPj/julia-set/d2-julia.html
+++ b/myPj/julia-set/d2-julia.html
@@ -52,9 +52,7 @@
             id="formula"
             class="mt-3 p-3 rounded text-center bg-transparent text-light"
             style="white-space: pre-wrap; width: 100%;"
-          >
-            開始方法：右上のメニュー→Play
-            設定変更：右上のメニュー→Reset→設定変更
+          >開始方法：右上のメニュー→Play<br>設定変更：右上のメニュー→Reset→設定変更
           </div>
         </div>
       </div>
