--- a/myPj/julia-set/d3-julia-dev.html
+++ b/myPj/julia-set/d3-julia-dev.html
@@ -53,94 +53,7 @@
     </div>
   </nav>
 
-  <!-- Offcanvas: 設定フォーム -->
-  <div
-    class="offcanvas offcanvas-end text-dark bg-light"
-    tabindex="-1"
-    id="offcanvasForm"
-    aria-labelledby="offcanvasFormLabel"
-  >
-    <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvasFormLabel">パラメータ設定</h5>
-      <button
-        type="button"
-        class="btn-close text-reset"
-        data-bs-dismiss="offcanvas"
-        aria-label="Close"
-      ></button>
-    </div>
-    <div class="offcanvas-body">
-      <form>
-        <!-- 凡例表示スイッチ -->
-        <div class="form-check form-switch mb-3">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            id="chk-legend"
-            checked
-          />
-          <label class="form-check-label" for="chk-legend">
-            凡例を表示
-          </label>
-        </div>
-
-        <!-- Re(c) -->
-        <div class="mb-3">
-          <label for="input-re" class="form-label">Re(c)</label>
-          <input
-            type="number"
-            step="0.01"
-            class="form-control"
-            id="input-re"
-          />
-        </div>
-        <!-- Im(c) -->
-        <div class="mb-3">
-          <label for="input-im" class="form-label">Im(c)</label>
-          <input
-            type="number"
-            step="0.01"
-            class="form-control"
-            id="input-im"
-          />
-        </div>
-        <!-- N (ポイント数) -->
-        <div class="mb-3">
-          <label for="input-n" class="form-label">N (ポイント数)</label>
-          <input
-            type="number"
-            min="10"
-            step="10"
-            class="form-control"
-            id="input-n"
-          />
-        </div>
-        <!-- maxIter -->
-        <div class="mb-3">
-          <label for="input-iter" class="form-label">maxIter</label>
-          <input
-            type="number"
-            min="1"
-            step="1"
-            class="form-control"
-            id="input-iter"
-          />
-        </div>
-
-        <!-- ステータス表示 -->
-        <div class="mb-3">
-          <span id="status">(待機中)</span>
-        </div>
-
-        <hr />
-        <p class="small text-muted">Run で描画開始（初期値が推奨パラメータです）</p>
-        <p class="small text-muted">赤色は発散と収束の境界です。</p>
-        <p class="small text-muted">ドラッグ・ホイールでカメラを移動できます。</p>
-        <p class="small text-muted">Stop を押すと初期状態に戻ります。</p>
-      </form>
-    </div>
-  </div>
-
+  <div id="offcanvas-placeholder"></div>
   <!-- 3D 描画領域 -->
   <div id="canvas-container">
     <canvas id="legend-canvas"></canvas>
@@ -151,8 +64,8 @@
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     crossorigin="anonymous"
   ></script>
-
+  <script src="js/3d/d3-load-partials.js"></script>
   <!-- エントリポイント：d3-init-app.js のみ読み込む -->
-  <script type="module" src="js/3d/d3-init-app.js"></script>
+  <!-- <script type="module" src="js/3d/d3-init-app.js"></script> -->
 </body>
 </html>
